Kubeternates/Practice/ingress-namespace/mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-depl
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      mysqldb: mysqldb
  template:
    metadata:
      labels:
        mysqldb: mysqldb
    spec:
      containers:
      - name: mysql-container
        image: mysql
        ports: 
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: wordpress
spec:
  selector:
    mysqldb: mysqldb
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
