Kubeternates/Practice/ingress-namespace/wordpress-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-depl
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      myapp: my-wordpress
  template:
    metadata:
      labels:
        myapp: my-wordpress
    spec:
      containers:
      - name: wordpress-container
        image: wordpress
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
spec:
  selector:
    myapp: my-wordpress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
